--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -6,7 +6,7 @@
       color: #191919;
       animation: none; 
     }
-    
+
     section#contact {
 
       background: linear-gradient(to bottom, #3b3baa, #140367);
@@ -15,3 +15,8 @@
       color: #191919;
       animation: none; 
     }
+       @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+         }
