--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,13 @@ section {
 h2 {
   font-size: clamp(2rem, 4vw, 2rem);
   margin-bottom: 1rem;
+  color: #f2f2f2;
 }
 
 p {
   font-size: clamp(1rem, 2.5vw, 1.5rem);
   max-width: 700px;
+  color: #f2f2f2;
 }
 
 
