--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,19 @@ h2 {
   font-size: clamp(2rem, 4vw, 2rem);
   margin-bottom: 1rem;
   color: #f2f2f2;
+  z-index: 900;
 }
 
 p {
   font-size: clamp(1rem, 2.5vw, 1.5rem);
   max-width: 700px;
   color: #f2f2f2;
+  z-index: 900;
 }
 
 
 .text-type, .text-type * {
   font-family: 'Poppins', sans-serif;
   font-size: 50px;
+  z-index: 900;
 }
