--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,16 +1,9 @@
-  section#about {
 
-      background: linear-gradient(to bottom, #5656b7, #140367);
-      background-attachment: fixed;
-      background-size: cover;
-      color: #191919;
-      animation: none; 
-    }
     .LightRays {
 
       background-size: cover;
 
-
+      z-index: 11;
 
     }
 
