--- a/src/about/About.css
+++ b/src/about/About.css
@@ -1,9 +1,23 @@
+   section.about {
 
-    .LightRays {
-
+      background: linear-gradient(to bottom, #2e2e6dff, #140367);
+      background-attachment: fixed;
       background-size: cover;
-
-      z-index: 11;
-
+      color: #191919;
+      animation: none; 
     }
+
+    section#about {
+
+      background: linear-gradient(to bottom, #2e2e6dff, #140367);
+      background-attachment: fixed;
+      background-size: cover;
+      color: #191919;
+      animation: none; 
+    }
+       @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+         }
 
